--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
 				<div class="collapse navbar-collapse" id="collapse-navbar">
 					<ul class="nav navbar-nav">
-						<li><a href="#questao1">Sobre o app</a></li>
-						<li><a href="#questao2">O projeto</a></li>
-						<li><a href="#questao3">Sobre nós</a></li>
-						<li><a href="#questao4">Contato</a></li>
+						<li><a href="#sobre_o_app">Sobre o app</a></li>
+						<li><a href="#o_projeto">O projeto</a></li>
+						<li><a href="#sobre_nos">Sobre nós</a></li>
+						<li><a href="#contato">Contato</a></li>
 					</ul>
 				</div>
 			</div>
@@ -45,7 +45,7 @@
 
 	</header>
 
-	<section id="questao1" class="container">
+	<section id="sobre_o_app" class="container">
 		<h2>Sobre o app</h2>
 		<div class="row">
 			<img class="img-responsive col-sm-5" src="assets/img/phone.jpg" alt="Foto de um telefone fixo grande, cor de rosa, antigo; ao lado de um smartphone branco">
@@ -68,7 +68,7 @@
 		<br><br>
 	</section>
 
-	<section id="questao2" class="container">
+	<section id="o_projeto" class="container">
 		<h2>O projeto</h2>
 
 		<div class="row">
@@ -89,7 +89,7 @@
 		<img class="img-responsive col-sm-5" src="assets/img/green.jpg" alt="Foto de uma mão pintada de verde, segurando uma planta da mesma cor">
 	</section><br><br>
 
-	<section id="questao3" class="container">
+	<section id="sobre_nos" class="container">
 		<h2>Sobre nós</h2>
 		<img class="img-responsive col-sm-5" src="assets/img/boat.jpg" alt="">
 		<div class="row">
@@ -108,7 +108,7 @@
 		</div>
 	</section><br><br>
 
-	<section id="questao4" class="container">
+	<section id="contato" class="container">
 		<h2>Contato</h2>
 
 		<div class="row">
